fixed ratings bug / wrong size thanks-img

--- a/public/stylesheets/form.css
+++ b/public/stylesheets/form.css
@@ -21,7 +21,7 @@ h2 {
 
 .fa-paw,
 .rating:hover .fa-paw {
-    font-size: 30px;
+    font-size: 25px;
     cursor: pointer;
     position: relative;
     display: block;
