--- a/public/stylesheets/thanks.css
+++ b/public/stylesheets/thanks.css
@@ -4,7 +4,7 @@
     padding: 20px;
 }
 
-.example_img {
+.thanks_img {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
